--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,9 +2,26 @@ buildscript {
     repositories {
         jcenter()
         google()
+        maven {
+           url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'io.fabric.tools:gradle:1.30.0'
+    }
+}
+
+allprojects {
+    // ...
+    repositories {
+       // ...
+       maven {
+           url 'https://s3.amazonaws.com/fabric-artifacts-private/internal-snapshots'
+       }
+       maven {
+           url 'https://maven.fabric.io/public'
+       }
     }
 }
 
@@ -36,12 +53,14 @@ repositories {
     mavenCentral()
 }
 
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1@aar'
+    compile('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
+        transitive = true;
+    }
 }
-
